    \item Deprecated `stack2` and `panel2` before their rewriting.
    \item Deprecated `as_Out`, that should have been `efourier_i.OutCoe` anyway. Consequently deprecated `panel.OutCoe` method that was additionnaly the only `Coe` method. May be back in further versions.
    \item Waiting for a cleaner fix, `subset` is now `subsetize`...

    \item Deprecated all `is.*` aliases for `is_*` methods
    \item largely reorganized `.R` files
    \item fixed a bug in `LDA` when `retain=1` (#e7704eb)
    \item various minor bugs fixes, see GitHub
  }
}

\section{Changes in version 1.2.4 (GitHub only)}{
  \itemize{
    \item New functions/methods: coo_intersect_segment, coo_intersect_direction, coo_intersect_angle, def_ldk_direction, def_ldk_angle, def_ldk, tips, coo_sample_prop
    \item coo_slice.Opn now supports ldk.
    \item Dependencies: now depends rgeos for intersecting methods.
    \item Data: lightened `nsfishes` and charring to comply R CMD CHECK.
    \item various minor bugs fixes, see GitHub
  }
}

\section{Changes in version 1.2.3 (GitHub only)}{
  \itemize{
    \item Built with 3.4.3
    \item coo_slice now suports ldks
    \item various minor bugs fixes, see GitHub
  }
}

\section{Changes in version 1.2.2 (CRAN + GitHub)}{
  \itemize{
    \item MANOVA_PW now returns p-values
    \item new datasets: nsfishes
    \item minor debugging, see GitHub
  }
}

\section{Changes in version 1.2.1 (GitHub only)}{
  \itemize{
    \item some testing with testthat
    \item minor debugging, see GitHub
  }
}

\section{Changes in version 1.1.6}{
  \itemize{
    \item `sfourier` family implementation
    \item new datasets: `apodemus` and `mouse`
  }
}

\section{Changes in version 1.1.0}{
  \itemize{
    \item plot2.PCA deprecated due to ggplot2 2.2.0 breaking changes
    \item Few minor changes that can be followed on GitHub commits
    \item Development continues on GitHub.
  }
}

\section{Changes in version 1.0 "Mataa" (CRAN + GitHub)}{
  \itemize{