@@ -67,8 +67,6 @@ S3method(chop,Coo)
 S3method(chop,default)
 S3method(classification_metrics,LDA)
 S3method(classification_metrics,table)
-S3method(classify,Coe)
-S3method(classify,default)
 S3method(combine,Ldk)
 S3method(combine,Opn)
 S3method(combine,OpnCoe)
@@ -477,7 +475,6 @@ export(calibrate_reconstructions)
 export(chc2pix)
 export(chop)
 export(classification_metrics)
-export(classify)
 export(coeff_rearrange)
 export(coeff_sel)
 export(coeff_split)
