@@ -311,89 +311,89 @@ classification_metrics.LDA <- function(x){
 }
 
 # classify --------
-#' Classify using LDA
-#'
-#' @param x a Coe
-#' @param fac a standalone factor, or the name or id of the $fac column to use.If it contains
-#' NAs, they will also be removed first from the x object
-#' @param ref at least two level names from `$fac` to use as a training subset of x
-#' @param unk same as above for one level name to classify
-#'
-#' @return a list with components:
-#' \itemize{
-#' \item \code{$N_ref} the number of elements in the training set
-#' \item \code{$N_unk} the number of elements in the unknown set
-#' \item \code{$counts} counts of classification of 'unk' in each class of 'ref'
-#' \item \code{$pc} same thing as percentages
-#' \item \code{$probs} same thing as posterior probabilities
-#' \item \code{$probs} same thing as posterior but as a data.frame
-#' }
-#'
-#' @examples
-#' table(olea, "var")
-#' x <- opoly(olea, 5, verbose=FALSE)
-#' classify(x, fac="var", ref=c("Aglan","Cypre"), unk="PicMa")
-#' @export
-classify <- function(x, fac, ref, unk){
-  UseMethod("classify")
-}
-#' @export
-classify.default <- function(x, fac, ref, unk){
-  stop("method only available for objects of class 'Coe'")
-}
-
-#' @export
-classify.Coe <- function(x, fac, ref, unk){
-  # so that we can directly pass a fac
-  if (!is.factor(fac)){
-    fac <- x$fac[, fac]
-  }
-  # fac <- prepare_fac(x, fac)
-  # if any NAs, we remove them
-  if (any(is.na(fac))) {
-    x  <- x %>% subset(which(!is.na(fac)))
-    fac <- fac %>% na.omit() %>% factor()
-  }
-  # we filter for levels of interest
-  all_id  <- which(fac %in% c(ref, unk))
-  # cat(all_id)
-  x <- slice(x, all_id)
-  fac <- fac[all_id]
-  # calculate a PCA using all taxa
-  P0 <- PCA(x)
-  # calculate an LDA using all but the unknown taxa
-  ref_id <- which(fac != unk)
-  L0 <- P0 %>%
-    slice(ref_id) %>%
-    LDA(fac[ref_id], retain=0.99, verbose=FALSE)
-  # extract and prepare scores of the unknown taxa
-  unk_id <- which(fac == unk)
-  P1_all <- P0 %>%
-    slice(unk_id)
-  P1 <- P1_all$x[, 1:ncol(L0$x)]
-
-  # classify using the MASS::lda
-  pred <- predict(L0$mod, P1)
-  # prepare the results as a list
-  counts <- table(pred$class)
-  N_unk  <- sum(counts)
-  pc     <- round((counts / sum(counts))*100, 2)
-  probs  <- pred$posterior
-#
-#   probs_fac <- cbind(pred$posterior, select(P1_all$fac, Site, Period)) %>%
-#     group_by(Site, Period) %>%
-#     summarise_each(funs(mean))
-#   probs_fac <- bind_cols(select(probs_fac, 1:2), round(select(probs_fac, 3)))
-  probs_fac <- NULL
-
-  return(list(N_ref=nrow(L0$x),
-              N_ref_tab=table(L0$fac),
-              N_unk=N_unk,
-              counts=counts,
-              pc=pc,
-              probs=probs,
-              probs_fac=probs_fac))
-}
+# #' Classify using LDA
+# #'
+# #' @param x a Coe
+# #' @param fac a standalone factor, or the name or id of the $fac column to use.If it contains
+# #' NAs, they will also be removed first from the x object
+# #' @param ref at least two level names from `$fac` to use as a training subset of x
+# #' @param unk same as above for one level name to classify
+# #'
+# #' @return a list with components:
+# #' \itemize{
+# #' \item \code{$N_ref} the number of elements in the training set
+# #' \item \code{$N_unk} the number of elements in the unknown set
+# #' \item \code{$counts} counts of classification of 'unk' in each class of 'ref'
+# #' \item \code{$pc} same thing as percentages
+# #' \item \code{$probs} same thing as posterior probabilities
+# #' \item \code{$probs} same thing as posterior but as a data.frame
+# #' }
+# #'
+# #' @examples
+# #' table(olea, "var")
+# #' x <- opoly(olea, 5)
+# #' classify(x, fac="var", ref=c("Aglan","Cypre"), unk="PicMa")
+# #' @export
+# #' classify <- function(x, fac, ref, unk){
+# #'   UseMethod("classify")
+# #' }
+# #' @export
+# #' classify.default <- function(x, fac, ref, unk){
+# #'   stop("method only available for objects of class 'Coe'")
+# #' }
+# #'
+# #' @export
+# #' classify.Coe <- function(x, fac, ref, unk){
+# #'   # so that we can directly pass a fac
+# #'   if (!is.factor(fac)){
+# #'     fac <- x$fac[, fac]
+# #'   }
+# #'   # fac <- prepare_fac(x, fac)
+# #'   # if any NAs, we remove them
+# #'   if (any(is.na(fac))) {
+# #'     x  <- x %>% slice(which(!is.na(fac)))
+# #'     fac <- fac %>% na.omit() %>% factor()
+# #'   }
+# #'   # we filter for levels of interest
+# #'   all_id  <- (fac %in% c(ref, unk))
+# #'   # cat(all_id)
+# #'   x <- slice(x, all_id)
+# #'   fac <- fac[all_id]
+# #'   # calculate a PCA using all taxa
+# #'   P0 <- PCA(x)
+# #'   # calculate an LDA using all but the unknown taxa
+# #'   ref_id <- fac != unk
+# #'   L0 <- P0 %>%
+# #'     slice(ref_id) %>%
+# #'     LDA(fac[ref_id], retain=0.99, verbose=FALSE)
+# #'   # extract and prepare scores of the unknown taxa
+# #'   unk_id <- fac == unk
+# #'   P1_all <- P0 %>%
+# #'     slice(unk_id)
+# #'   P1 <- P1_all$x[, 1:ncol(L0$x)]
+# #'
+# #'   # classify using the MASS::lda
+# #'   pred <- predict(L0$mod, P1)
+# #'   # prepare the results as a list
+# #'   counts <- table(pred$class)
+# #'   N_unk  <- sum(counts)
+# #'   pc     <- round((counts / sum(counts))*100, 2)
+# #'   probs  <- pred$posterior
+# #' #
+# #' #   probs_fac <- cbind(pred$posterior, select(P1_all$fac, Site, Period)) %>%
+# #' #     group_by(Site, Period) %>%
+# #' #     summarise_each(funs(mean))
+# #' #   probs_fac <- bind_cols(select(probs_fac, 1:2), round(select(probs_fac, 3)))
+# #'   probs_fac <- NULL
+# #'
+# #'   return(list(N_ref=nrow(L0$x),
+# #'               N_ref_tab=table(L0$fac),
+# #'               N_unk=N_unk,
+# #'               counts=counts,
+# #'               pc=pc,
+# #'               probs=probs,
+# #'               probs_fac=probs_fac))
+# #' }
 
 # reLDA -----------
 
